--- a/Palette_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Palette_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,6 +146,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -154,9 +155,9 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=331.000 Y=-7.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
