Rebase To This!
Thank you :)

--- a/Palette_Project/Config/DefaultEngine.ini
+++ b/Palette_Project/Config/DefaultEngine.ini
@@ -2,13 +2,18 @@
 GameName=Palette_Project
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap
-TransitionMap=
+EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap.TopDownExampleMap
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap.TopDownExampleMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/Blueprints/Palette_Gamemode.Palette_Gamemode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/NavigationSystem.RecastNavMesh]
