--- a/Palette_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Palette_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,18 +150,17 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Assets
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Blueprints/Maps/TopDownExampleMap
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Blueprints/Easel_Pawn.Easel_Pawn
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=315.000 Y=155.000
@@ -1730,6 +1729,38 @@ TextRenderActor.Cooking=True
 TextRenderActor.Replication=True
 TextRenderActor.Input=True
 TextRenderActor.Actor=True
+Pawn_Palette_C.Tick=True
+Pawn_Palette_C.Pawn=True
+Pawn_Palette_C.Camera=True
+Pawn_Palette_C.Replication=True
+Pawn_Palette_C.Rendering=True
+Pawn_Palette_C.Collision=True
+Pawn_Palette_C.Actor=True
+Pawn_Palette_C.Input=True
+PrimitiveComponent.Materials=True
+PrimitiveComponent.Physics=True
+PrimitiveComponent.Collision=True
+Pawn_Palette_C.TransformCommon=True
+Pawn_Easel_C.TransformCommon=True
+Pawn_Easel_C.Pawn=True
+Pawn_Easel_C.Camera=True
+Pawn_Easel_C.Rendering=True
+Pawn_Easel_C.Replication=True
+Pawn_Easel_C.Collision=True
+Pawn_Easel_C.Input=True
+Pawn_Easel_C.Actor=True
+Pawn_Palette_C.Default=True
+Pawn_Easel_C.Default=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
+Palette_Gamemode_C.Tick=True
+Palette_Gamemode_C.Classes=True
+Palette_Gamemode_C.Game=True
+Palette_Gamemode_C.GameMode=True
+K2Node_VariableSet.Events=True
+K2Node_MakeStruct.PinOptions=True
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.MoveForward,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,IOSRuntimeSettings.Build.Remote Build Options,
@@ -1803,17 +1834,20 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.MoveForward,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Maps/TopDownExampleMap
-MRUItem1=/Game/Blueprints/Blueprints/M_Cursor_Decal
-MRUItem2=/Game/Blueprints/Blueprints/Easel_Pawn
-MRUItem3=/Game/Blueprints/Blueprints/TopDownGameMode
-MRUItem4=/Game/Blueprints/Blueprints/TopDownController
-MRUItem5=/Game/Blueprints/Blueprints/TopDownCharacter
-MRUItem6=/Game/Blueprints/Blueprints/Easel_Character
+MRUItem0=/Game/Blueprints/Blueprints/Palette_Gamemode
+MRUItem1=/Game/Blueprints/Maps/TopDownExampleMap
+MRUItem2=/Game/Blueprints/Blueprints/Pawn_Palette
+MRUItem3=/Game/Blueprints/Blueprints/Easel_Pawn
+MRUItem4=/Game/Blueprints/Blueprints/M_Cursor_Decal
+MRUItem5=/Game/Blueprints/Blueprints/TopDownGameMode
+MRUItem6=/Game/Blueprints/Blueprints/TopDownController
+MRUItem7=/Game/Blueprints/Blueprints/TopDownCharacter
+MRUItem8=/Game/Blueprints/Blueprints/Easel_Character
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Blueprints/Pawn_Palette.Pawn_Palette;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Blueprints/Blueprints/Easel_Pawn.Easel_Pawn;
+RecentlyPlaced=/Game/Blueprints/Blueprints/Pawn_Easel.Pawn_Easel;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
@@ -2004,6 +2038,11 @@ NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagar
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 
 [MaterialEditor]
 PrimType=1
