--- a/Palette_Project/Config/DefaultEngine.ini
+++ b/Palette_Project/Config/DefaultEngine.ini
@@ -68,3 +68,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_TopDownBP",NewGameName="/Script/Palette_Project")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDownBP",NewGameName="/Script/Palette_Project")
 
+[/Script/Engine.PhysicsSettings]
+bSupportUVFromHitResults=True
+
