--- a/Palette_Project/Config/DefaultInput.ini
+++ b/Palette_Project/Config/DefaultInput.ini
@@ -149,6 +149,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 +ActionMappings=(ActionName="MoveLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="PaintColor_Up",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
++ActionMappings=(ActionName="PaintColor_Down",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
@@ -161,8 +163,6 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_X)
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=MagicLeap_Left_Trackpad_X)
-+AxisMappings=(AxisName="CyclePaintColor_Axis",Scale=1.000000,Key=MouseScrollUp)
-+AxisMappings=(AxisName="CyclePaintColor_Axis",Scale=-1.000000,Key=MouseScrollDown)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
