Finished Paint Objects
Paint object base functionality is finished, I also have fixed the weird UI issue where the last paint color in the bars would sometimes be blank.

--- a/Palette_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Palette_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Blueprints/UI
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -163,6 +163,7 @@ CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/Blueprints/BP_PaintObject.BP_PaintObject
 OpenAssetsAtExit=/Game/Blueprints/Blueprints/BP_Pawn_Easel.BP_Pawn_Easel
 OpenAssetsAtExit=/Game/Blueprints/Blueprints/BP_Pawn_Palette.BP_Pawn_Palette
+OpenAssetsAtExit=/Game/Blueprints/Blueprints/UI/UI_PlayerHUD_V1.UI_PlayerHUD_V1
 
 [RootWindow]
 ScreenPosition=X=315.000 Y=155.000
@@ -1029,8 +1030,8 @@ TextureEditor.TimeStamp=2021.03.04-21.02.30
 TextureEditor.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2021.06.07-14.21.41
 StaticMeshEditor.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2021.03.04-21.02.27
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.06.07-14.21.39
+SequencerWidgets.LastCompileMethod=External
 
 [MRU]
 MRUItem0=/Game/Blueprints/Maps/Protoyping
@@ -2255,6 +2256,57 @@ BP_PaintObject_C.Actor=True
 BP_PaintObject_C.Input=True
 BP_PaintObject_C.TransformCommon=True
 BP_PaintObject_C.Default=True
+UI_MainMenu_V1_C.Appearance=True
+UI_MainMenu_V1_C.Designer=True
+UI_MainMenu_V1_C.Input=True
+UI_MainMenu_V1_C.Interaction=True
+UI_MainMenu_V1_C.Performance=True
+UI_MainMenu_V1_C.Layout=True
+UI_MainMenu_V1_C.Behavior=True
+UI_MainMenu_V1_C.Render Transform=True
+UI_MainMenu_V1_C.Accessibility=True
+UI_MainMenu_V1_C.Clipping=True
+UI_MainMenu_V1_C.Navigation=True
+UI_MainMenu_V1_C.Localization=True
+UI_PauseMenu_V1_C.Appearance=True
+UI_PauseMenu_V1_C.Designer=True
+UI_PauseMenu_V1_C.Input=True
+UI_PauseMenu_V1_C.Interaction=True
+UI_PauseMenu_V1_C.Performance=True
+UI_PauseMenu_V1_C.Layout=True
+UI_PauseMenu_V1_C.Behavior=True
+UI_PauseMenu_V1_C.Render Transform=True
+UI_PauseMenu_V1_C.Accessibility=True
+UI_PauseMenu_V1_C.Clipping=True
+UI_PauseMenu_V1_C.Navigation=True
+UI_PauseMenu_V1_C.Localization=True
+UI_PlayerHUD_V1_C.Default=True
+UI_PlayerHUD_V1_C.Appearance=True
+UI_PlayerHUD_V1_C.Designer=True
+UI_PlayerHUD_V1_C.Input=True
+UI_PlayerHUD_V1_C.Interaction=True
+UI_PlayerHUD_V1_C.Performance=True
+UI_PlayerHUD_V1_C.Layout=True
+UI_PlayerHUD_V1_C.Behavior=True
+UI_PlayerHUD_V1_C.Render Transform=True
+UI_PlayerHUD_V1_C.Accessibility=True
+UI_PlayerHUD_V1_C.Clipping=True
+UI_PlayerHUD_V1_C.Navigation=True
+UI_PlayerHUD_V1_C.Localization=True
+BP_Palette_Gamemode_C.Tick=True
+BP_Palette_Gamemode_C.Default=True
+BP_Palette_Gamemode_C.Classes=True
+BP_Palette_Gamemode_C.Game=True
+BP_Palette_Gamemode_C.GameMode=True
+BP_StaticObject_Paintable_PrototypePillar_C.Tick=True
+BP_StaticObject_Paintable_PrototypePillar_C.Default=True
+BP_StaticObject_Paintable_PrototypePillar_C.Replication=True
+BP_StaticObject_Paintable_PrototypePillar_C.Rendering=True
+BP_StaticObject_Paintable_PrototypePillar_C.Collision=True
+BP_StaticObject_Paintable_PrototypePillar_C.Actor=True
+BP_StaticObject_Paintable_PrototypePillar_C.Input=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.MoveForward,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Paint,InputSettings.Bindings.ActionMappings.AbsorbPaint,InputSettings.Bindings.ActionMappings.CyclePaintColor,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.MiniMapToggle,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.CyclePaintColor_Axis,InputSettings.Bindings.ActionMappings.MoveUp,InputSettings.Bindings.ActionMappings.MoveDown,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.ActionMappings.MoveLeft,InputSettings.Bindings.ActionMappings.PaintColor_Up,InputSettings.Bindings.ActionMappings.PaintColor_Down,InputSettings.Bindings.ActionMappings.Pause,
@@ -2338,7 +2390,7 @@ Pawn_Palette_C=PropertyWrapper.DefaultValueCategory.None,
 StaticObject_Paintable_C=
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,
 Pawn_Easel_C=PropertyWrapper.DefaultValueCategory.None,
 AbsorbBrush=PropertyWrapper.DefaultValueCategory.None,
 StaticObject_Paintable_PrototypePillar_C=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,
@@ -2347,7 +2399,7 @@ StaticObject_Paintable_BeachLandscape_C=Landscape.Collision.Collision,PropertyWr
 Palette_Gamemode_C=PropertyWrapper.DefaultValueCategory.None,
 UI_PlayerHUD_C=
 BP_Pawn_Palette_C=
-BP_Pawn_Easel_C=
+BP_Pawn_Easel_C=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,
 BP_Palette_Gamemode_C=
 UI_MainMenu_C=
 MainMenu_C=
@@ -2359,7 +2411,7 @@ BP_Shade_Controller_C=
 BP_Task_GetRoamLocation_C=
 BP_Task_GetPlayerLocation_C=
 BP_Tasks_MoveToSmooth_C=
-CapsuleComponent=Landscape.Collision.Collision,
+CapsuleComponent=
 PlanarReflectionComponent=
 BP_WaterBody_C=Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,
 PlanarReflection=Landscape.Collision.Collision,
@@ -2370,28 +2422,29 @@ NavMeshBoundsVolume=Landscape.Collision.Collision,
 BP_PaintObject_C=Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
 BP_StaticObject_Paintable_C=
+UI_PlayerHUD_V1_C=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Maps/Protoyping
-MRUItem1=/Game/Blueprints/Maps/Beach_Level
-MRUItem2=/Game/Blueprints/Blueprints/BP_Pawn_Palette
-MRUItem3=/Game/Blueprints/Blueprints/BP_Pawn_Easel
-MRUItem4=/Game/Blueprints/Blueprints/BP_PaintObject
-MRUItem5=/Game/Blueprints/Blueprints/BP_PhysicsObject
-MRUItem6=/Game/Assets/Characters/Palette/Paint/Mat_Canvas
-MRUItem7=/Game/Assets/Characters/Palette/Paint/Mat_Splat
-MRUItem8=/Game/Blueprints/Blueprints/StaticObjects/BP_StaticObject_Paintable
-MRUItem9=/Game/Assets/EnvironmentAssets/BeachLevel/Landscape/Model_BeachLandscape
-MRUItem10=/Game/Assets/EnvironmentAssets/BeachLevel/Landscape/Model_BeachLandscape_Unwrapped
-MRUItem11=/Game/Blueprints/Blueprints/StaticObjects/BP_StaticObject_Paintable_BeachLandscape
-MRUItem12=/Game/StylizedWaterShader/Maps/WaterTestScene
-MRUItem13=/Game/StylizedWaterShader/BluePrint/BP_WaterBody
-MRUItem14=/Game/Blueprints/Blueprints/Shades/BP_Tasks_MoveToSmooth
-MRUItem15=/Game/Blueprints/Blueprints/Shades/BP_Task_GetRoamLocation
-MRUItem16=/Game/Blueprints/Blueprints/Shades/BP_Task_GetPlayerLocation
-MRUItem17=/Game/Blueprints/Blueprints/Shades/BP_Task_ClearFocus
-MRUItem18=/Game/Blueprints/Blueprints/Shades/BP_Tasks_SetPlayerFocus
-MRUItem19=/Game/Blueprints/Blueprints/Shades/BP_Shade_BT
+MRUItem0=/Game/Blueprints/Blueprints/UI/UI_PlayerHUD_V1
+MRUItem1=/Game/Blueprints/Blueprints/StaticObjects/BP_StaticObject_Paintable
+MRUItem2=/Game/Blueprints/Blueprints/StaticObjects/BP_StaticObject_Paintable_PrototypePillar
+MRUItem3=/Game/Blueprints/Blueprints/BP_Palette_Gamemode
+MRUItem4=/Game/Blueprints/Blueprints/UI/UI_PauseMenu_V1
+MRUItem5=/Game/Blueprints/Blueprints/UI/UI_MainMenu_V1
+MRUItem6=/Game/Blueprints/Maps/Protoyping
+MRUItem7=/Game/Blueprints/Maps/Beach_Level
+MRUItem8=/Game/Blueprints/Blueprints/BP_Pawn_Palette
+MRUItem9=/Game/Blueprints/Blueprints/BP_Pawn_Easel
+MRUItem10=/Game/Blueprints/Blueprints/BP_PaintObject
+MRUItem11=/Game/Blueprints/Blueprints/BP_PhysicsObject
+MRUItem12=/Game/Assets/Characters/Palette/Paint/Mat_Canvas
+MRUItem13=/Game/Assets/Characters/Palette/Paint/Mat_Splat
+MRUItem14=/Game/Assets/EnvironmentAssets/BeachLevel/Landscape/Model_BeachLandscape
+MRUItem15=/Game/Assets/EnvironmentAssets/BeachLevel/Landscape/Model_BeachLandscape_Unwrapped
+MRUItem16=/Game/Blueprints/Blueprints/StaticObjects/BP_StaticObject_Paintable_BeachLandscape
+MRUItem17=/Game/StylizedWaterShader/Maps/WaterTestScene
+MRUItem18=/Game/StylizedWaterShader/BluePrint/BP_WaterBody
+MRUItem19=/Game/Blueprints/Blueprints/Shades/BP_Tasks_MoveToSmooth
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Blueprints/BP_PaintObject.BP_PaintObject;
@@ -2576,6 +2629,8 @@ BP_StaticObject_Paintable_BeachLandscape_C.Collision=False
 /Game/StylizedWaterShader/BluePrint/BP_WaterBody.BP_WaterBody=0
 /Game/Assets/EnvironmentAssets/BeachLevel/Landscape/Model_BeachLandscape_Unwrapped.Model_BeachLandscape_Unwrapped=0
 /Game/Assets/EnvironmentAssets/BeachLevel/Landscape/Model_BeachLandscape.Model_BeachLandscape=0
+/Game/Blueprints/Blueprints/StaticObjects/BP_StaticObject_Paintable_PrototypePillar.BP_StaticObject_Paintable_PrototypePillar=0
+/Game/Blueprints/Blueprints/UI/UI_PlayerHUD_V1.UI_PlayerHUD_V1=0
 
 [/Script/EditorStyle.EditorStyleSettings]
 SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
@@ -2613,7 +2668,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 ProjectPackagingSettings="\"Object.Packaging.IniKeyBlacklist\" "
-Object=
+Object="\"Object.Appearance.FillColorAndOpacity\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14].Input\" "
 AnimationSettings="\"Object.Compression.KeyEndEffectorsMatchNameArray\" \"Object.CustomAttributes.BoneCustomAttributesNames\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[0]\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[1]\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[2]\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[3]\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[4]\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[5]\" "
@@ -2654,7 +2709,7 @@ MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpression=
 Pawn_Palette_C=
-Pawn=
+Pawn="\"Object.NumPaintColors\" "
 StaticObject_Paintable_C=
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 PreviewMaterial=
@@ -2664,10 +2719,10 @@ StaticObject_Paintable_PrototypeFloor_C=
 StaticObject_Paintable_PrototypePillar_C=
 MaterialExpressionDesaturation="\"Object.LuminanceFactors\" "
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.FillColorAndOpacity\" "
+Visual="\"Object.Appearance.FillColorAndOpacity\" "
 Palette_Gamemode_C="\"Object.PaintAmount_Red\" "
-GameModeBase="\"Object.PaintAmount_Blue\" "
+GameModeBase=
 Info=
 Pawn_Easel_C=
 UI_PlayerHUD_C=
@@ -2678,8 +2733,8 @@ PanelWidget=
 SizeBox=
 ContentWidget=
 EditableTextBox="\"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.BackgroundColor\" "
-BP_Pawn_Palette_C=
-BP_Palette_Gamemode_C="\"Object.PaintAmount_Blue\" "
+BP_Pawn_Palette_C="\"Object.NumPaintColors\" "
+BP_Palette_Gamemode_C=
 MainMenu_C=
 LevelScriptActor=
 BP_Pawn_Easel_C=
