Shades now remove paint on Canvas

--- a/Palette_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Palette_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,7 +93,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1910,Y=1006)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-KG712DI
 LastExecutedLaunchName=DESKTOP-KG712DI
 LastExecutedPIEPreviewDevice=
@@ -102,6 +102,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=1910
 NewWindowHeight=1006
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -149,7 +150,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Blueprints/StaticObjects
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -183,11 +184,7 @@ LastLevel=/Game/Blueprints/Maps/Protoyping
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/EnvironmentAssets/Prototyping/Mat_Canvas_Prototype.Mat_Canvas_Prototype
-OpenAssetsAtExit=/Game/Blueprints/Blueprints/Shades/BP_Shade_Anger.BP_Shade_Anger
 OpenAssetsAtExit=/Game/Blueprints/Blueprints/StaticObjects/BP_StaticObject_Paintable.BP_StaticObject_Paintable
-OpenAssetsAtExit=/Game/Assets/Characters/Palette/Paint/Mat_Splat.Mat_Splat
-OpenAssetsAtExit=/Game/Blueprints/Blueprints/BP_Pawn_Palette.BP_Pawn_Palette
 
 [RootWindow]
 ScreenPosition=X=292.000 Y=254.000
@@ -1050,8 +1047,8 @@ ExternalImagePicker.TimeStamp=2021.06.07-14.21.31
 ExternalImagePicker.LastCompileMethod=External
 MaterialEditor.TimeStamp=2021.06.07-14.21.35
 MaterialEditor.LastCompileMethod=External
-TextureEditor.TimeStamp=2021.03.04-21.02.30
-TextureEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2021.06.07-14.21.41
+TextureEditor.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2021.06.07-14.21.41
 StaticMeshEditor.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2021.06.07-14.21.39
@@ -2603,6 +2600,44 @@ SkeletalMesh.Sampling=True
 BoneProxy.Transform=True
 BoneProxy.Bone=True
 BoneProxy.Reference Transform=True
+BP_Task_IsTargetActorPlayer_C.Default=True
+BP_Task_IsTargetActorPlayer_C.Task=True
+BP_Task_IsTargetActorPlayer_C.Description=True
+BP_Task_IsTargetActorPaint_C.Default=True
+BP_Task_IsTargetActorPaint_C.Task=True
+BP_Task_IsTargetActorPaint_C.Description=True
+BP_Tasks_SetTargetActorFocus_C.Task=True
+BP_Tasks_SetTargetActorFocus_C.Description=True
+BP_Shade_Anger_C.ComponentTick=True
+BP_Shade_Anger_C.ComponentReplication=True
+BP_Shade_Anger_C.Variable=True
+BTDecorator_Cooldown.FlowControl=True
+BTDecorator_Cooldown.Decorator=True
+BTDecorator_Cooldown.Description=True
+BP_Tasks_Smash_C.Task=True
+BP_Tasks_Smash_C.Description=True
+BP_Tasks_SetCanSmash_C.Task=True
+BP_Tasks_SetCanSmash_C.Description=True
+BP_Tasks_SetCanNotSmash_C.Task=True
+BP_Tasks_SetCanNotSmash_C.Description=True
+BP_Tasks_SetTargetActorFocus_C.Default=True
+BP_Tasks_LI_Explode_C.Task=True
+BP_Tasks_LI_Explode_C.Description=True
+BP_Shade_PaintObject_C.Tick=True
+BP_Shade_PaintObject_C.Default=True
+BP_Shade_PaintObject_C.Replication=True
+BP_Shade_PaintObject_C.Rendering=True
+BP_Shade_PaintObject_C.Collision=True
+BP_Shade_PaintObject_C.Actor=True
+BP_Shade_PaintObject_C.Input=True
+BP_Tasks_G_Run_C.Task=True
+BP_Tasks_G_Run_C.Description=True
+BP_Tasks_LI_SetCanExplode_C.Task=True
+BP_Tasks_LI_SetCanExplode_C.Description=True
+BP_Tasks_G_SetPlayerFocus_C.Task=True
+BP_Tasks_G_SetPlayerFocus_C.Description=True
+BP_Tasks_R_Smash_C.Task=True
+BP_Tasks_R_Smash_C.Description=True
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.MoveForward,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Paint,InputSettings.Bindings.ActionMappings.AbsorbPaint,InputSettings.Bindings.ActionMappings.CyclePaintColor,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.MiniMapToggle,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.CyclePaintColor_Axis,InputSettings.Bindings.ActionMappings.MoveUp,InputSettings.Bindings.ActionMappings.MoveDown,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.ActionMappings.MoveLeft,InputSettings.Bindings.ActionMappings.PaintColor_Up,InputSettings.Bindings.ActionMappings.PaintColor_Down,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,
@@ -2677,14 +2712,14 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ax
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 Landscape=Landscape.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Collision.Collision,
 SceneComponent=CapsuleComponent.Collision.Collision,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-BP_Sky_Sphere_C=Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
+BP_Sky_Sphere_C=Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 BrushComponent=
 Brush=Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,CapsuleComponent.Collision.Collision,
 Pawn_Palette_C=PropertyWrapper.DefaultValueCategory.None,
 StaticObject_Paintable_C=
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,CapsuleComponent.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,CapsuleComponent.Collision.Collision,
 Pawn_Easel_C=PropertyWrapper.DefaultValueCategory.None,
@@ -2694,15 +2729,15 @@ StaticObject_Paintable_PrototypeFloor_C=PropertyWrapper.DefaultValueCategory.Non
 StaticObject_Paintable_BeachLandscape_C=Landscape.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 Palette_Gamemode_C=PropertyWrapper.DefaultValueCategory.None,
 UI_PlayerHUD_C=
-BP_Pawn_Palette_C=
+BP_Pawn_Palette_C=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,CapsuleComponent.Collision.Collision,
 BP_Pawn_Easel_C=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,
 BP_Palette_Gamemode_C=
 UI_MainMenu_C=
 MainMenu_C=
 PlayerController=
 UI_PauseMenu_V1_C=
-BP_Shade_Base_C=CapsuleComponent.Collision.Collision,
-CharacterMovementComponent=
+BP_Shade_Base_C=
+CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,CapsuleComponent.Collision.Collision,
 BP_Shade_Controller_C=
 BP_Task_GetRoamLocation_C=
 BP_Task_GetPlayerLocation_C=
@@ -2724,32 +2759,39 @@ BP_StaticObject_Paintable_PrototypePillar_C=PropertyWrapper.DefaultValueCategory
 EQSTestingDummy_C=Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,
 BP_Shade_Lingering_C=CapsuleComponent.Collision.Collision,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 AIController=
-BP_Shade_Anger_C=CapsuleComponent.Collision.Collision,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
+BP_Shade_Anger_C=CapsuleComponent.Collision.Collision,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,StaticMeshActor.Collision.Collision,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 ThirdPerson_AnimBP_C=
 RageShade_AnimBP_C=
+BP_Task_IsTargetActorPlayer_C=
+SkeletalMeshComponent=
+BP_Tasks_SetTargetActorFocus_C=
+StaticMeshActor=StaticMeshActor.Collision.Collision,
+BP_Shade_PaintObject_C=
+BP_Tasks_LI_Explode_C=
+MaterialInstanceConstant=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Characters/Shades/Rage/RageShade_Skeleton
-MRUItem1=/Game/Assets/Characters/Shades/Rage/RageShade
-MRUItem2=/Game/Assets/Characters/Shades/Rage/RageShade_Anim
-MRUItem3=/Game/Assets/Characters/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem4=/Game/Assets/Characters/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem5=/Game/Assets/Characters/Shades/Rage/RageShade_AnimBP
-MRUItem6=/Game/Assets/Characters/Palette/Paint/Mat_Splat_Y
-MRUItem7=/Game/Assets/Characters/Palette/Paint/Mat_Splat_R
-MRUItem8=/Game/Assets/Characters/Palette/Paint/Mat_Splat_B
-MRUItem9=/Game/Assets/Characters/Palette/Paint/Mat_Brush_Y
-MRUItem10=/Game/Assets/Characters/Palette/Paint/Mat_Brush_R
-MRUItem11=/Game/Assets/Characters/Palette/Paint/Mat_Brush_P
-MRUItem12=/Game/Assets/Characters/Palette/Paint/Mat_Brush_O
-MRUItem13=/Game/Assets/Characters/Palette/Paint/Mat_Brush_G
-MRUItem14=/Game/Assets/Characters/Palette/Paint/Mat_Brush_B
+MRUItem0=/Game/Blueprints/Blueprints/StaticObjects/BP_StaticObject_Paintable
+MRUItem1=/Game/Blueprints/Maps/Protoyping
+MRUItem2=/Game/Blueprints/Blueprints/Shades/Tasks/BP_Tasks_R_Smash
+MRUItem3=/Game/Assets/Characters/Palette/Paint/Texture_PaintAlpha_Blue
+MRUItem4=/Game/Assets/Characters/Palette/Paint/Texture_PaintAlpha_Shade
+MRUItem5=/Game/Blueprints/Maps/Beach_Level
+MRUItem6=/Game/Assets/Characters/Palette/Paint/Mat_Splat_Shade
+MRUItem7=/Game/Assets/EnvironmentAssets/Prototyping/Mat_Canvas_Prototype
+MRUItem8=/Game/Blueprints/Blueprints/Shades/Tasks/BP_Tasks_LI_Explode
+MRUItem9=/Game/Blueprints/Blueprints/BP_Shade_PaintObject
+MRUItem10=/Game/Blueprints/Blueprints/Shades/BP_Shade_Lingering
+MRUItem11=/Game/Blueprints/Blueprints/Shades/Tasks/BP_Tasks_LI_SetCanExplode
+MRUItem12=/Game/Blueprints/Blueprints/Shades/BP_Shade_Anger_BT
+MRUItem13=/Game/Blueprints/Blueprints/Shades/BP_Shade_Lingering_BT
+MRUItem14=/Game/Assets/Characters/Palette/Paint/Texture_PaintAlpha_Yellow
 MRUItem15=/Game/Blueprints/Blueprints/BP_Pawn_Palette
-MRUItem16=/Game/Assets/Characters/Palette/Paint/Mat_Splat
-MRUItem17=/Game/Blueprints/Maps/Protoyping
-MRUItem18=/Game/Blueprints/Maps/Beach_Level
-MRUItem19=/Game/Assets/Characters/Palette/Paint/Mat_Canvas
+MRUItem16=/Game/Blueprints/Blueprints/Shades/Tasks/BP_Task_GetRoamLocation
+MRUItem17=/Game/Blueprints/Maps/MainMenu
+MRUItem18=/Game/Assets/Characters/Shades/Rage/RageShade_Anim
+MRUItem19=/Game/Assets/Characters/Shades/Rage/RageShade
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Blueprints/Shades/BP_Shade_Anger.BP_Shade_Anger;
@@ -2895,6 +2937,8 @@ PreviewMaterial.Translucency=False
 BP_StaticObject_Paintable_BeachLandscape_C.Collision=False
 BTTask_MoveTo.Node=False
 EnvQueryGenerator_ActorsOfClass.Option=False
+FbxImportUI.Animation=False
+FbxImportUI.Mesh=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2961,6 +3005,22 @@ EnvQueryGenerator_ActorsOfClass.Option=False
 /Game/Assets/Characters/Mannequin/Animations/ThirdPerson_IdleRun_2D.ThirdPerson_IdleRun_2D=0
 /Game/Assets/Characters/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=0
 /Game/Assets/Characters/Shades/Rage/RageShade_AnimBP.RageShade_AnimBP=0
+/Game/Blueprints/Blueprints/Shades/Tasks/BP_Task_IsTargetActorPlayer.BP_Task_IsTargetActorPlayer=0
+/Game/Blueprints/Blueprints/Shades/Tasks/BP_Task_IsTargetActorpAINT.BP_Task_IsTargetActorPaint=0
+/Game/Blueprints/Blueprints/Shades/Tasks/BP_Tasks_SetTargetActorFocus.BP_Tasks_SetTargetActorFocus=0
+/Game/Blueprints/Blueprints/Shades/Tasks/BP_Tasks_Smash.BP_Tasks_Smash=0
+/Game/Blueprints/Blueprints/Shades/Tasks/BP_Tasks_SetCanSmash.BP_Tasks_SetCanSmash=0
+/Game/Blueprints/Blueprints/Shades/Tasks/BP_Tasks_SetCanNotSmash.BP_Tasks_SetCanNotSmash=0
+/Game/Assets/Characters/Shades/Rage/RageShade_Anim.RageShade_Anim=0
+/Game/Assets/Characters/Palette/Paint/Texture_PaintAlpha_Shade.Texture_PaintAlpha_Shade=0
+/Game/Blueprints/Blueprints/Shades/Tasks/BP_Tasks_LI_Explode.BP_Tasks_LI_Explode=0
+/Game/Blueprints/Blueprints/BP_Shade_PaintObject.BP_Shade_PaintObject=0
+/Game/Assets/Characters/Palette/Paint/Mat_Splat_Shade.Mat_Splat_Shade=0
+/Game/Blueprints/Blueprints/Shades/BP_Shade_Lingering_BT.BP_Shade_Lingering_BT=0
+/Game/Blueprints/Blueprints/Shades/BP_Shade_Anger_BT.BP_Shade_Anger_BT=0
+/Game/Blueprints/Blueprints/Shades/Tasks/BP_Tasks_LI_SetCanExplode.BP_Tasks_LI_SetCanExplode=0
+/Game/Blueprints/Blueprints/Shades/BP_Shade_Lingering.BP_Shade_Lingering=0
+/Game/Blueprints/Blueprints/Shades/Tasks/BP_Tasks_R_Smash.BP_Tasks_R_Smash=0
 
 [/Script/EditorStyle.EditorStyleSettings]
 SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
@@ -3040,7 +3100,7 @@ MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpression=
 Pawn_Palette_C=
-Pawn=
+Pawn="\"Object.Default.ViableTargets\" "
 StaticObject_Paintable_C=
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 PreviewMaterial=
@@ -3053,7 +3113,7 @@ ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 Widget="\"Object.Appearance.FillColorAndOpacity\" "
 Visual="\"Object.Appearance.FillColorAndOpacity\" "
 Palette_Gamemode_C="\"Object.PaintAmount_Red\" "
-GameModeBase=
+GameModeBase="\"Object.CurrentPaintTexture\" "
 Info=
 Pawn_Easel_C=
 UI_PlayerHUD_C=
@@ -3064,26 +3124,26 @@ PanelWidget=
 SizeBox=
 ContentWidget=
 EditableTextBox="\"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.BackgroundColor\" "
-BP_Pawn_Palette_C="\"Object.Paint_Brushes\" "
-BP_Palette_Gamemode_C=
+BP_Pawn_Palette_C=
+BP_Palette_Gamemode_C="\"Object.CurrentPaintTexture\" "
 MainMenu_C=
 LevelScriptActor=
 BP_Pawn_Easel_C=
 UI_PauseMenu_V1_C=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[4].KeyType\" \"Object.Blackboard.Keys.Keys[7].KeyType\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[4].KeyType\" \"Object.Blackboard.Keys.Keys[7].KeyType\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-BP_Shade_Controller_C="\"Object.BehaviorTree\" "
-AIController="\"Object.BehaviorTree\" "
-Controller="\"Object.BehaviorTree\" "
+BP_Shade_Controller_C=
+AIController=
+Controller=
 BP_Task_GetRoamLocation_C="\"Object.Task.TickInterval\" "
-BTTask_BlueprintBase="\"Object.Task.TickInterval\" "
-BTTaskNode="\"Object.Task.TickInterval\" "
-BTNode="\"Object.Task.TickInterval\" "
+BTTask_BlueprintBase=
+BTTaskNode=
+BTNode=
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode=
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 BP_Task_GetPlayerLocation_C="\"Object.Task.TickInterval\" "
 BP_Tasks_MoveToSmooth_C="\"Object.Task.TickInterval\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
@@ -3098,7 +3158,7 @@ EnvQueryTest="\"Object.Filter.FloatValueMin\" "
 EnvQueryNode="\"Object.Filter.FloatValueMin\" "
 EnvQueryTest_Pathfinding="\"Object.Pathfinding.PathFromContext\" \"Object.Filter.FloatValueMin\" "
 BTTask_RunEQSQuery="\"Object.EQS.EQSRequest\" "
-BTTask_BlackboardBase="\"Object.EQS.EQSRequest\" "
+BTTask_BlackboardBase=
 CapsuleComponent=
 ShapeComponent=
 BP_Task_ClearFocus_C="\"Object.Task.TickInterval\" "
@@ -3111,17 +3171,29 @@ EnvQueryTest_Dot="\"Object.Filter.FloatValueMin\" "
 EnvQueryTest_PathfindingBatch="\"Object.Pathfinding.PathFromContext\" \"Object.Filter.FloatValueMin\" "
 BP_Tasks_Run_C="\"Object.Task.TickInterval\" "
 BP_Tasks_Walk_C="\"Object.Task.TickInterval\" "
-BP_Shade_Base_C=
-Character=
+BP_Shade_Base_C="\"Object.Default.ViableTargets\" "
+Character="\"Object.Default.ViableTargets\" "
 BP_Task_GetInvestigateLocation_C=
 AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" "
 MaterialExpressionConstant4Vector="\"Object.Constant\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 RageShade_AnimBP_C=
 AnimInstance=
+BP_Task_IsTargetActorPlayer_C="\"Object.Task.TickInterval\" "
+BP_Task_IsTargetActorPaint_C="\"Object.Task.TickInterval\" "
+BP_Tasks_SetTargetActorFocus_C="\"Object.Task.TickInterval\" "
+BP_Shade_Anger_C="\"Object.Default.ViableTargets\" \"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
+BP_Tasks_Smash_C="\"Object.Task.TickInterval\" "
+BP_Tasks_SetCanSmash_C="\"Object.Task.TickInterval\" "
+BP_Tasks_SetCanNotSmash_C="\"Object.Task.TickInterval\" "
+BP_Shade_Lingering_C="\"Object.Default.ViableTargets\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+BP_Tasks_LI_Explode_C=
+BP_Shade_PaintObject_C=
+MaterialExpressionConstant3Vector="\"Object.Constant\" "
 
 [MaterialEditor]
-PrimType=3
+PrimType=1
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=1
@@ -3179,7 +3251,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
