--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+Palette_Project/Content/Blueprints/Maps/Beach_Level.umap
