--- a/Palette_Project/Config/DefaultGame.ini
+++ b/Palette_Project/Config/DefaultGame.ini
@@ -2,3 +2,5 @@
 ProjectID=627B0B514E527BF8D0661FB53DC5878F
 ProjectName=Top Down BP Game Template
 
+[/Script/AIModule.AISense_Sight]
+bAutoRegisterAllPawnsAsSources=false
